class FamilyId {
  FamilyId(this.value);
  final String value;
}
