class MemberLevel {
  MemberLevel(this.value);
  final int value;
}
