import 'education.dart';

class Grade {
  // 教育課程名
  final Education education;
  // 年数
  final int grade;
  Grade(this.education, this.grade);
}
