class MemberExp {
  final int value;
  MemberExp(this.value);
}
