class MemberId {
  final String value;
  MemberId(this.value);
}
