class MemberName {
  MemberName(this.value);
  
  final String value;

  @override
  String toString() => value;
}
