class Age {
  final int value;
  Age(this.value);
}
