class Money {
  final int value;
  Money(this.value);
}
