@startuml

class Member {
  - MemberId id
  - FamilyId familyId
  - MemberName name
  - Icon icon
  - Birthday birthday
  - Grade grade
  - MemberExp exp
  - Money balance
  - Money minSavings
  - DateTime createdAt
  - DateTime updatedAt
  + Age get age()
}

class MemberId {
  - String value
}

class FamilyId {
  - String value
}

class MemberName {
  - String value
  + MemberName(String value)
}

class Icon {
  // FlutterのIconクラス
}

class Birthday {
  - DateTime value
}

class Grade {
  - Education education
  - int grade
}

class MemberExp {
  - int value
}

class Money {
  - int amount
}

class Age {
  - int value
}

class MemberLevel {
  - int value
}

class MemberLevelExp {
  - Map<MemberLevel, MemberExp> _map
}

class MemberRepository {
  + Future<Member?> find(MemberId memberId)
  + Future<List<Member>?> findMembersBy(FamilyId familyId)
}

class MemberLevelExpRepository {
  + Future<MemberLevelExp?> find(FamilyId id)
  + Future save(MemberLevelExp? levelExp)
}

class SavingRecode {
  - MemberId memberId
  - Money balance
  - Money difference
  - String reason
  - DateTime recordedAt
  + SavingRecode(MemberId memberId, Money balance, Money difference, String reason, DateTime recordedAt)
}

class KeyAlreadyExistsException {
  - String message
  + KeyAlreadyExistsException([String message])
  + String toString()
}

enum Education {
  preElementary
  elementary
  middleSchool
  highSchool
  university
  postUniversity
}

Member *--> MemberId
Member *--> FamilyId
Member *--> MemberName
Member *--> Icon
Member *--> Birthday
Member *--> Grade
Member *--> MemberExp
Member *--> Money
Member *--> Age
Member *--> DateTime
Grade *--> Education
MemberLevelExp *--> MemberLevel
MemberLevelExp *--> MemberExp
SavingRecode *--> MemberId
SavingRecode *--> Money

@enduml